--- a/.github/workflows/build_package.yaml
+++ b/.github/workflows/build_package.yaml
@@ -23,10 +23,10 @@ jobs:
         pip install build
         pip install twine
     - name: Build package
-      run: python -m build
+      run: python -m build --sdist --wheel .
     - name: Publish package
       run: |
-        python -m twine upload --skip-existing dist/*
+        python -m twine upload dist/*
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
