--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.0.0", "setuptools>=40.8.0", "wheel"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "readmeai"
-version = "0.1.9992"
+version = "0.2.2"
 description = "🚀 Generate awesome README.md files from the terminal, powered by OpenAI's GPT language model APIs 💫"
 authors = ["Eli <0x.eli.64s@gmail.com>"]
 license = "MIT"
@@ -97,3 +97,6 @@ addopts = "--strict-markers --disable-pytest-warnings"
 
 [tool.coverage.run]
 omit = ["tests/*", "*/__init__.py"]
+
+[tool.setuptools.package-data]
+"readmeai.conf" = ["**/*.toml"]
