--- a/.github/workflows/build_package.yaml
+++ b/.github/workflows/build_package.yaml
@@ -23,10 +23,9 @@ jobs:
         pip install build
         pip install twine
     - name: Build package
-      run: python -m build --sdist --wheel .
+      run: python -m build
     - name: Publish package
-      run: |
-        python -m twine upload dist/*
+      run: python -m twine upload --skip-existing dist/*
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
